# extraction_SR

./: .env  .gitignore  README.md  pyproject.toml
config/: clf_parsing_logs.pkl  keywords_config.py
src/evaluation/: Plot evaluation.ipynb  evaluate.py  evaluate_citations.py  evaluate_fp.py  evaluate_io.py  evaluate_rct.py  loading_utils.py
src/extraction/get_bibliography/: get_citations.py  parse_citations.py
src/extraction/get_forest_plot/: caption.py  generate_utils.py  main_FP.py  utils.py
src/extraction/get_io/: get_io_tables.py
src/extraction/get_rct/: generate_utils.py  main_rct.py  utils.py
src/extraction/get_tables/: main_table.py  utils.py
src/merge_files/: merge_files.py
