[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["karimlasri <karim.lasri94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.09"
ipykernel = "^6.29.5"
transformers = "^4.44.0"
torch = "^2.4.0"
openai = "^1.40.0"
matplotlib = "^3.9.1"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"
scikit-learn = "^1.5.1"
google-generativeai = "^0.7.2"
sentence-transformers = "^3.0.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
ruff = "^0.4.4"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
describe_plots = "src.generate.app:main"
